--- a/Resources/Views/Admin/Edit.en.resx
+++ b/Resources/Views/Admin/Edit.en.resx
@@ -117,58 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Account" xml:space="preserve">
-    <value>Аккаунт</value>
+  <data name="admin" xml:space="preserve">
+    <value>admin</value>
   </data>
-  <data name="Children" xml:space="preserve">
-    <value>Детские</value>
+  <data name="Manage" xml:space="preserve">
+    <value>Manage</value>
   </data>
-  <data name="CourseWork" xml:space="preserve">
-    <value>Курсовой проект</value>
+  <data name="roles" xml:space="preserve">
+    <value>roles</value>
   </data>
-  <data name="Dark" xml:space="preserve">
-    <value>Тёмная</value>
+  <data name="Save" xml:space="preserve">
+    <value>Save</value>
   </data>
-  <data name="Fiction" xml:space="preserve">
-    <value>Фантастика</value>
-  </data>
-  <data name="Genres" xml:space="preserve">
-    <value>Жанр</value>
-  </data>
-  <data name="History" xml:space="preserve">
-    <value>История</value>
-  </data>
-  <data name="HomePage" xml:space="preserve">
-    <value>Домой</value>
-  </data>
-  <data name="Horror" xml:space="preserve">
-    <value>Хоррор</value>
-  </data>
-  <data name="Light" xml:space="preserve">
-    <value>Светлая</value>
-  </data>
-  <data name="Privacy" xml:space="preserve">
-    <value>Конфиденциальность</value>
-  </data>
-  <data name="Romance" xml:space="preserve">
-    <value>Роман</value>
-  </data>
-  <data name="Search" xml:space="preserve">
-    <value>Поиск</value>
-  </data>
-  <data name="Theme" xml:space="preserve">
-    <value>Тема</value>
-  </data>
-  <data name="Thriller" xml:space="preserve">
-    <value>Триллер</value>
-  </data>
-  <data name="Title" xml:space="preserve">
-    <value>Фанфики</value>
-  </data>
-  <data name="Travel" xml:space="preserve">
-    <value>Путешествия</value>
-  </data>
-  <data name="Western" xml:space="preserve">
-    <value>Вестерн</value>
+  <data name="user" xml:space="preserve">
+    <value>user</value>
   </data>
 </root>
