--- a/Resources/Views/Admin/Index.en.resx
+++ b/Resources/Views/Admin/Index.en.resx
@@ -117,58 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Account" xml:space="preserve">
-    <value>Аккаунт</value>
+  <data name="Block" xml:space="preserve">
+    <value>Block</value>
   </data>
-  <data name="Children" xml:space="preserve">
-    <value>Детские</value>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
   </data>
-  <data name="CourseWork" xml:space="preserve">
-    <value>Курсовой проект</value>
+  <data name="Edit" xml:space="preserve">
+    <value>Edit</value>
   </data>
-  <data name="Dark" xml:space="preserve">
-    <value>Тёмная</value>
+  <data name="Email" xml:space="preserve">
+    <value>Email</value>
   </data>
-  <data name="Fiction" xml:space="preserve">
-    <value>Фантастика</value>
+  <data name="Lockout" xml:space="preserve">
+    <value>Lockout</value>
   </data>
-  <data name="Genres" xml:space="preserve">
-    <value>Жанр</value>
+  <data name="Unblock" xml:space="preserve">
+    <value>Unblock</value>
   </data>
-  <data name="History" xml:space="preserve">
-    <value>История</value>
-  </data>
-  <data name="HomePage" xml:space="preserve">
-    <value>Домой</value>
-  </data>
-  <data name="Horror" xml:space="preserve">
-    <value>Хоррор</value>
-  </data>
-  <data name="Light" xml:space="preserve">
-    <value>Светлая</value>
-  </data>
-  <data name="Privacy" xml:space="preserve">
-    <value>Конфиденциальность</value>
-  </data>
-  <data name="Romance" xml:space="preserve">
-    <value>Роман</value>
-  </data>
-  <data name="Search" xml:space="preserve">
-    <value>Поиск</value>
-  </data>
-  <data name="Theme" xml:space="preserve">
-    <value>Тема</value>
-  </data>
-  <data name="Thriller" xml:space="preserve">
-    <value>Триллер</value>
-  </data>
-  <data name="Title" xml:space="preserve">
-    <value>Фанфики</value>
-  </data>
-  <data name="Travel" xml:space="preserve">
-    <value>Путешествия</value>
-  </data>
-  <data name="Western" xml:space="preserve">
-    <value>Вестерн</value>
+  <data name="UserManage" xml:space="preserve">
+    <value>User management</value>
   </data>
 </root>
