--- a/Resources/Views/Home/ReadBook.ru.resx
+++ b/Resources/Views/Home/ReadBook.ru.resx
@@ -135,4 +135,7 @@
   <data name="Send" xml:space="preserve">
     <value>Отправить</value>
   </data>
+  <data name="Subscribe" xml:space="preserve">
+    <value>Подписаться</value>
+  </data>
 </root>
